# datamorphx

./: .gitignore  README.md  datamorphx-0.0.1-py3-none-any.whl  setup.cfg
datamorphx/: __init__.py  augmentor.py  cli.py
datamorphx/strategies/: paraphrase.py  synonym.py
testenv/: pyvenv.cfg
tests/: test_basic.py
