[metadata]
name = datamorphx
version = 0.0.2
author = Yesha Doshi
author_email = yeshadoshi81@gmail.com
description = Smart text augmentation for NLP and LLM fine-tuning.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Yesha05/datamorph
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = .
